# robot-framework-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  robocop.cfg
.devcontainer/: devcontainer.json  postcreatecommand.sh
.github/workflow/: checks.yaml
.github/workflows/: checks.yaml  pullrequest.yaml  push.yaml  release.yaml
src/lib/pythonmod/: hellopython.py
src/lib/robotmod/: HelloRobot.resource
src/test/: test.robot
